examples/lisp/snapshots/test_errors__eof.snap
---
source: examples/lisp/main.rs
expression: err
---
[1;31m-- SYNTAX ERROR --[0m
I tried to parse expression
[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m[1;36m^ started here[0m

I expected one of: [1;36m([0m, [1;36m)[0m

I found few possible branches:

[1;37m*[0m I tried to parse nil value
[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m[1;36m^ started here[0m

[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m [1m[31m^ unexpected token.[0m[1m I expected ')'[0m

[1;37m*[0m I tried to parse cons pair [1;37m(<expr> . <expr>)[0m
[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m[1;36m^ started here[0m

Then I tried to parse nil value
[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m [1m[31m^ unexpected token.[0m[1m I expected '('[0m

[1;37m*[0m I tried to parse cons pair [1;37m(<expr> . <expr>)[0m
[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m[1;36m^ started here[0m

Then I tried to parse cons pair [1;37m(<expr> . <expr>)[0m
[36m0  | [0m[97m([0m[90m\EOF[0m
[36m   | [0m [1m[31m^ unexpected token.[0m[1m I expected '('[0m


